# anitra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  anitra.rdbg  build.bat  build_engine.bat  build_externals.bat  compile_commands.json  generate.bat  imgui.ini  readme.md
include/: export.h
include/core/: core.h
include/data/: ObservableMap.h  data_layout.h
include/systems/: database_system.h  logging_system.h  settings_system.h
lib/: CMakeLists.txt
lib/glad/: glad.c  glad.h
lib/glew/include/GL/: gl3w.h  glcorearb.h
lib/glew/src/: gl3w.c  glfw_test.c  glut_test.c
lib/glfw/include/GLFW/: glfw3.h
lib/glfw/lib/: glfw3.lib  glfw3dll.lib
lib/imgui-1.90.9/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
lib/imgui-1.90.9/.github/: pull_request_template.md
lib/imgui-1.90.9/backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_metal.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_osx.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h  imgui_impl_win32.cpp  imgui_impl_win32.h
lib/imgui-1.90.9/docs/: CHANGELOG.txt  CONTRIBUTING.md  EXAMPLES.md  FAQ.md
lib/imgui-1.90.9/examples/example_allegro5/: example_allegro5.vcxproj  example_allegro5.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_android_opengl3/: main.cpp
lib/imgui-1.90.9/examples/example_apple_metal/: README.md
lib/imgui-1.90.9/examples/example_glfw_opengl2/: Makefile  example_glfw_opengl2.vcxproj  example_glfw_opengl2.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj  example_glfw_vulkan.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_glfw_wgpu/: main.cpp
lib/imgui-1.90.9/examples/example_glut_opengl2/: example_glut_opengl2.vcxproj  example_glut_opengl2.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_null/: main.cpp
lib/imgui-1.90.9/examples/example_sdl2_directx11/: example_sdl2_directx11.vcxproj  example_sdl2_directx11.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_sdl2_opengl2/: example_sdl2_opengl2.vcxproj  example_sdl2_opengl2.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_sdl2_opengl3/: example_sdl2_opengl3.vcxproj  example_sdl2_opengl3.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_sdl2_sdlrenderer2/: main.cpp
lib/imgui-1.90.9/examples/example_sdl2_vulkan/: example_sdl2_vulkan.vcxproj  example_sdl2_vulkan.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_sdl3_opengl3/: example_sdl3_opengl3.vcxproj  example_sdl3_opengl3.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_sdl3_sdlrenderer3/: example_sdl3_sdlrenderer3.vcxproj  example_sdl3_sdlrenderer3.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_win32_directx10/: example_win32_directx10.vcxproj  example_win32_directx10.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_win32_directx11/: build_win32.bat  example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_win32_directx12/: example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_win32_directx9/: example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/example_win32_opengl3/: example_win32_opengl3.vcxproj  example_win32_opengl3.vcxproj.filters  main.cpp
lib/imgui-1.90.9/examples/libs/emscripten/: emscripten_mainloop_stub.h
lib/imgui-1.90.9/examples/libs/glfw/include/GLFW/: glfw3.h  glfw3native.h
lib/imgui-1.90.9/examples/libs/usynergy/: README.txt  uSynergy.c  uSynergy.h
lib/imgui-1.90.9/misc/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
lib/imgui-1.90.9/misc/debuggers/: README.txt
lib/imgui-1.90.9/misc/fonts/: binary_to_compressed_c.cpp
lib/imgui-1.90.9/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
lib/imgui-1.90.9/misc/single_file/: imgui_single_file.h
scripts/: generate_clangd_format.bat
src/: CMakeLists.txt  debug_render.cpp  debug_render.h  export.h  game.h  main.c  main.cpp  scene.h
src/core/: core.c  core.cpp  core.h  loadlibrary.h  loadlibrary_linux.c  loadlibrary_linux.cpp  loadlibrary_windows.cpp
src/engine/: debug_render.cpp  debug_render.h  engine.cpp  engine.h  myimguiconfig.h  physics.cpp  physics.h  renderer.cpp  renderer.h  scene.cpp
src/systems/: database_system.cpp  logging_system.cpp  settings_system.cpp
